# eigenELM

./: .clang-format  .gitignore  CMakeLists.txt  VoteElm.h  eigenELM.pro  elm.cpp  elm.h  elm_in_elm.cpp  elm_in_elm.h  functions.cpp  functions.h  main.cpp  接口描述.txt
Eigen/src/Core/arch/NEON/: PacketMath.h
include/: VoteElm.h  dataPreprocessHelper.h  elm.h  elm_in_elm.h  fileUtils.hpp  functions.h
src/: VoteElm.cpp  dataPreprocessHelper.cpp  elm.cpp  elm_in_elm.cpp  functions.cpp  main.cpp
train/: train_input.txt
